<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ndege</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <!--default vals-->
    <string name="empty_list">Hold up! Seems like you haved tagged any bird yet</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="no_pics">No pictures to display. Move along now.</string>


    <!--tag bird frag-->
    <string name="tag_status_default">Tap to identify a bird</string>
    <string name="tag_status_activated">Listening...</string>
    <string name="tag_status_matching">Matching...</string>
    <string name="tag_status_failed">Sorry! We were unable to identify the bird sound</string>
    <string name="tag_status_net_err">Sorry! We were unable to reach our servers.\
        Please check your internet connection and try again</string>
    <string name="content_desc">image</string>

    <!--view tags-->
    <string name="tag_english_name">Sokoke Pipit</string>
    <string name="tag_genus_spec_name">Anthus sokokensis</string>
    <string name="taglist_tag_date">Thur 27, Feb</string>

    <!-- tag details activity-->
    <string name="title_tagdetail_activity">Tag Details</string>
    <string name="tagdetail_scientificname_lbl">Scientific Name:</string>
    <string name="tagdetail_recorder_lbl">Recorded by:</string>
    <string name="tagdetail_recorder">Hans Matheve</string>
    <string name="tagdetail_country_lbl">Country Recorded in:</string>
    <string name="tagdetail_country">Kenya</string>
    <string name="tagdetail_location_lbl">Location:</string>
    <string name="tagdetail_location">Kakamega Forest</string>
    <string name="tagdetail_soundtype_lbl">Sound type:</string>
    <string name="tagdetail_soundtype">Call</string>
    <string name="tagdetail_xenoCanto_lbl">More Info</string>

    <!-- delete dialog -->
    <string name="dlg_title">Delete Tag</string>
    <string name="dlg_msg">Are you sure you want to delete this Tag?</string>
    <string name="dlg_pos_BTN">OK</string>
    <string name="dlg_neg_BTN">Cancel</string>

    <!-- imageSlider activity -->
    <string name="title_activity_imageSlider">View Images</string>

    <!-- services & receivers -->
    <string name="svc_netops_proc">:Ndege</string>
</resources>
