<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.droid.ndege.ui.TagDetailsActivity" >

    <!--<item android:id="@+id/action_search"-->
    <!--android:title="@string/action_search"-->
    <!--android:icon="@drawable/action_search"-->
    <!--app:showAsAction="always"/>-->

    <!-- delete tag -->
    <item android:id="@+id/action_delete"
        android:title="@string/delete"
        app:showAsAction="always"
        android:icon="@drawable/content_discard"/>

    <!--share item-->
    <item android:id="@+id/action_share"
        android:title="@string/share"
        app:showAsAction="always"
        android:icon="@drawable/social_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
    />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>