<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:background="@drawable/imageview_background">

            <ImageView
                android:id="@+id/bird_img"
                android:src="@drawable/bird_brown_cute"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:maxWidth="200dp"
                android:maxHeight="200dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_gravity="fill"
                android:focusable="true"
                android:clickable="true"
                android:layout_centerInParent="true"
                android:contentDescription="@string/content_desc"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="#ff000000" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="100dp"
                android:background="@drawable/tag_row_style"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/imageView" />

            <TextView
                android:id="@+id/taglist_english_name"
                android:text="@string/tag_english_name"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/taglist_genus_spec_name"
                android:textStyle="italic"
                android:text="@string/tag_genus_spec_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_alignParentBottom="true" />

        </RelativeLayout>

    </LinearLayout>



</RelativeLayout>